# aoc22

./: Cargo.toml
day2/: main.rs
day3/: main.rs
day4/: main.rs
day5/: main.rs
day7/: main.rs
