[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
indextree = "4.5.0"

[[bin]]
name = "day2"
path = "day2/main.rs"

[[bin]]
name = "day3"
path = "day3/main.rs"

[[bin]]
name = "day4"
path = "day4/main.rs"

[[bin]]
name = "day5"
path = "day5/main.rs"

[[bin]]
name = "day7"
path = "day7/main.rs"
